# serializer version: 1
# name: TestQuadXWaypointsCostEqual.test_snapshot
  -0.006
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.1
  0.003
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.10
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.100
  0.057
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.101
  0.997
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.102
  -0.015
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.103
  -0.048
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.104
  0.048
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.105
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.106
  -0.001
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.107
  0.936
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.108
  -2.55
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.109
  2.988
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.11
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.110
  1.641
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.111
  0.629
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.112
  0.487
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.113
  0.667
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.114
  0.832
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.115
  0.508
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.116
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.117
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.118
  1.202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.119
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.12
  0.968
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.120
  -0.147
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.121
  2.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.122
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.123
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.124
  0.161
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.125
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.126
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.127
  0.953
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.128
  0.014
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.129
  -0.821
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.13
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.130
  0.217
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.131
  0.236
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.132
  -0.288
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.133
  1.615
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.134
  -1.183
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.135
  1.98
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.136
  -0.734
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.137
  1.764
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.138
  3.723
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.139
  0.372
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.14
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.140
  0.118
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.141
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.142
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.143
  dict({
    'collision': False,
    'cost_direction': 0.0,
    'cost_distance': 0.118,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.121, -0.799,  1.202]),
    'reference_error': array([-0.122,  0.798, -0.266]),
    'state_of_interest': array([-0.   , -0.001,  0.936]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.144
  -2.003
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.145
  -0.535
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.146
  -2.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.147
  -0.061
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.148
  0.01
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.149
  0.046
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.15
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.150
  0.997
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.151
  0.042
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.152
  -0.047
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.153
  1.009
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.154
  0.001
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.155
  -0.001
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.156
  0.954
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.157
  -2.337
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.158
  -0.312
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.159
  -0.812
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.16
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.160
  0.741
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.161
  0.694
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.162
  0.71
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.163
  0.583
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.164
  0.942
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.165
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.166
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.167
  1.202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.168
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.169
  -0.147
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.17
  0.05
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.170
  2.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.171
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.172
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.173
  0.161
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.174
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.175
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.176
  0.953
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.177
  0.041
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.178
  -0.83
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.179
  0.151
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.18
  0.051
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.180
  0.308
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.181
  -0.37
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.182
  1.567
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.183
  -1.257
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.184
  1.99
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.185
  -0.592
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.186
  1.694
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.187
  3.74
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.188
  0.494
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.189
  0.118
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.19
  0.049
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.190
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.191
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.192
  dict({
    'collision': False,
    'cost_direction': 0.0,
    'cost_distance': 0.118,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.121, -0.799,  1.202]),
    'reference_error': array([-0.12 ,  0.798, -0.248]),
    'state_of_interest': array([ 0.001, -0.001,  0.954]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.193
  0.191
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.194
  1.147
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.195
  0.234
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.196
  -0.099
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.197
  0.047
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.198
  0.032
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.199
  0.993
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.2
  0.001
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.20
  0.049
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.200
  -0.039
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.201
  -0.091
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.202
  1.245
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.203
  0.003
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.204
  0.004
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.205
  0.996
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.206
  0.904
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.207
  2.028
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.208
  -0.356
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.209
  0.182
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.21
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.210
  0.118
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.211
  0.284
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.212
  0.327
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.213
  0.119
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.214
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.215
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.216
  1.202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.217
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.218
  -0.147
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.219
  2.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.22
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.220
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.221
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.222
  0.161
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.223
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.224
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.225
  0.953
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.226
  0.054
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.227
  -0.834
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.228
  0.051
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.229
  0.198
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.23
  1.202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.230
  -0.476
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.231
  1.514
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.232
  -1.261
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.233
  2.004
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.234
  -0.584
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.235
  1.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.236
  3.733
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.237
  0.858
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.238
  0.119
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.239
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.24
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.240
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.241
  dict({
    'collision': False,
    'cost_direction': 0.0,
    'cost_distance': 0.119,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.121, -0.799,  1.202]),
    'reference_error': array([-0.118,  0.803, -0.207]),
    'state_of_interest': array([0.003, 0.004, 0.996]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.242
  0.326
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.243
  -5.353
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.244
  2.86
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.245
  -0.076
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.246
  0.005
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.247
  0.063
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.248
  0.995
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.249
  0.116
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.25
  -0.147
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.250
  0.021
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.251
  1.418
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.252
  0.006
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.253
  0.011
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.254
  1.038
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.255
  0.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.256
  -2.741
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.257
  2.059
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.258
  0.505
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.259
  0.468
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.26
  2.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.260
  0.519
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.261
  0.398
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.262
  0.617
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.263
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.264
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.265
  1.202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.266
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.267
  -0.147
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.268
  2.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.269
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.27
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.270
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.271
  0.161
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.272
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.273
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.274
  0.953
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.275
  0.01
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.276
  -0.833
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.277
  0.04
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.278
  0.306
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.279
  -0.426
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.28
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.280
  1.467
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.281
  -1.202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.282
  2.049
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.283
  -0.601
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.284
  1.814
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.285
  3.669
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.286
  0.506
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.287
  0.12
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.288
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.289
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.29
  0.161
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.290
  dict({
    'collision': False,
    'cost_direction': 0.0,
    'cost_distance': 0.12,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.121, -0.799,  1.202]),
    'reference_error': array([-0.115,  0.809, -0.164]),
    'state_of_interest': array([0.006, 0.011, 1.038]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.3
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.30
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.31
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.32
  0.953
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.33
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.34
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.35
  0.234
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.36
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.37
  -0.148
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.38
  1.578
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.39
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.4
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.40
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.41
  -0.807
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.42
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.43
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.44
  -0.014
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.45
  dict({
    'collision': False,
    'cost_direction': 2.523,
    'cost_distance': 0.119,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.121, -0.799,  1.202]),
    'reference_error': array([-0.121,  0.799, -0.234]),
    'state_of_interest': array([-0.   ,  0.   ,  0.968]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.46
  2.548
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.47
  -0.74
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.48
  3.539
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.49
  0.028
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.5
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.50
  -0.011
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.51
  0.031
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.52
  0.999
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.53
  -0.018
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.54
  -0.038
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.55
  -0.586
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.56
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.57
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.58
  0.944
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.59
  1.721
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.6
  1.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.60
  -0.384
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.61
  2.253
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.62
  0.558
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.63
  0.563
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.64
  0.558
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.65
  0.473
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.66
  0.596
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.67
  0.121
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.68
  -0.799
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.69
  1.202
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.7
  -0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.70
  0.364
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.71
  -0.147
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.72
  2.546
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.73
  -1.445
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.74
  1.779
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.75
  0.161
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.76
  1.343
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.77
  3.911
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.78
  0.953
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.79
  0.078
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.8
  0.0
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.80
  -0.79
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.81
  0.3
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.82
  0.394
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.83
  -0.082
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.84
  1.6
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.85
  -1.351
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.86
  1.822
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.87
  -0.85
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.88
  1.582
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.89
  3.813
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.9
  -0.764
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.90
  -0.237
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.91
  0.122
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.92
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.93
  False
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.94
  dict({
    'collision': False,
    'cost_direction': 0.005,
    'cost_distance': 0.118,
    'env_complete': False,
    'num_targets_reached': 0,
    'out_of_bounds': False,
    'reference': array([ 0.121, -0.799,  1.202]),
    'reference_error': array([-0.121,  0.799, -0.258]),
    'state_of_interest': array([-0.   , -0.   ,  0.944]),
  })
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.95
  -5.887
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.96
  3.272
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.97
  0.354
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.98
  -0.033
# ---
# name: TestQuadXWaypointsCostEqual.test_snapshot.99
  0.032
# ---
